# delegate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Delegate.h
